force-app/main/default/objects/sugati__API_Log__c/fields/sugati__S_API_Booking_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_API_Booking_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>API Logs (Booking)</relationshipLabel>
    <relationshipName>API_Logs_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>