force-app/main/default/objects/sugati__API_Log__c/fields/sugati__S_API_Classname__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_API_Classname__c</fullName>
    <label>Classname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>