force-app/main/default/objects/sugati__API_Log__c/fields/sugati__S_API_Is_Returning_Error__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_API_Is_Returning_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Returning Error</label>
    <type>Checkbox</type>
</CustomField>