force-app/main/default/objects/sugati__API_Log__c/fields/sugati__S_API_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_API_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>