force-app/main/default/objects/sugati__API_Log__c/fields/sugati__S_API_Params__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_API_Params__c</fullName>
    <description>JSON formatted list of params</description>
    <label>Params</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>