force-app/main/default/objects/sugati__API_Log__c/fields/sugati__S_API_Tour_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_API_Tour_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tour Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>API Logs (Tour)</relationshipLabel>
    <relationshipName>API_Logs_Tour</relationshipName>
    <type>Lookup</type>
</CustomField>